fix: 优化swagger
