# docs/swagger.json
@@ -1,19 +1,14 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "基于 Go + GORM 的博客系统后端",
-        "title": "我的博客 API",
-        "contact": {},
-        "version": "0.1"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/api",
     "paths": {
         "/app-info": {
             "get": {
                 "description": "获取当前后端应用的版本、环境、运行状态等基础信息",
                 "tags": [
-                    "基础模块"
+                    "Base"
                 ],
                 "summary": "获取系统信息",
                 "responses": {
@@ -41,7 +36,7 @@
         "/article": {
             "get": {
                 "tags": [
-                    "文章模块"
+                    "Article"
                 ],
                 "summary": "获取文章列表",
                 "responses": {
@@ -62,7 +57,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "文章模块"
+                    "Article"
                 ],
                 "summary": "更新文章",
                 "parameters": [
@@ -100,7 +95,7 @@
             "post": {
                 "description": "提交文章标题、内容等信息创建新篇章",
                 "tags": [
-                    "文章模块"
+                    "Article"
                 ],
                 "summary": "新增文章",
                 "parameters": [
@@ -138,7 +133,7 @@
             "delete": {
                 "description": "根据文章 ID 永久删除文章",
                 "tags": [
-                    "文章模块"
+                    "Article"
                 ],
                 "summary": "删除文章",
                 "parameters": [
@@ -176,7 +171,7 @@
             "get": {
                 "description": "根据文章 ID 查询文章的详细内容及分类信息",
                 "tags": [
-                    "文章模块"
+                    "Article"
                 ],
                 "summary": "获取文章详情",
                 "parameters": [
